# singularity-git

./: CONTRIBUTING.md  meson.build
po/: POTFILES.in  meson.build
resources/: dev.sinty.git.gresource.xml
src/: app.vala  diff_view.vala  diff_window.vala  window.vala
ui/: main.vetro
